2003-07-30  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Added instructions for making CMFFormController work with CMF 1.3 to the
     README file.

2003-07-30  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * .metadata files didn't load properly if they didn't contain both an actions
     section and a validators section.  Fixed.

2003-07-30 Kevin Teague <kevin@bud.ca> (Wheat)

   * Prettied up the ZMI tables for Default Actions and Default Validators

2003-07-27  Geoff Davis <geoff@geoffdavis.net> (plonista)

    * Complete refactoring.  Default properties are now specified in .metadata
      files when appropriate.

2003-07-04  Geoff Davis <geoff@geoffdavis.net> (plonista)

    * Initial check-in